--- a/BikeShareProject/app/src/main/AndroidManifest.xml
+++ b/BikeShareProject/app/src/main/AndroidManifest.xml
@@ -12,13 +12,16 @@
 
     <application
         android:name=".BikeShareApplication"
+        android:screenOrientation="portrait"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BikeShareActivity">
+        <activity
+            android:name=".BikeShareActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -39,10 +42,16 @@
 
         <activity
             android:name=".BikeMapActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_bike_map">
         </activity>
         <activity
-            android:name=".BikeInfo">
+            android:name=".BikeRegisterActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".BikeInfoActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
